--- a/Application.csproj
+++ b/Application.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <IsPackable>false</IsPackable>
-    <SpaRoot>ClientApp\</SpaRoot>
+    <SpaRoot>..\ClientApp\</SpaRoot>
     <SpaProxyServerUrl>https://localhost:44476</SpaProxyServerUrl>
     <SpaProxyLaunchCommand>npm start</SpaProxyLaunchCommand>
     <RootNamespace>CQRS_Simple_and_Angular</RootNamespace>
@@ -16,9 +16,9 @@
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.SpaProxy" Version="6.0.11" />
 	<ProjectReference Include="..\Commands\Commands.csproj" />
+	<ProjectReference Include="..\Domain\Domain.csproj" />
 	<ProjectReference Include="..\Dtos\Dtos.csproj" />
 	<ProjectReference Include="..\Queries\Queries.csproj" />
-	<ProjectReference Include="..\Domain\Domain.csproj" />
   </ItemGroup>
 
   <ItemGroup>
